--- a/Application/index.html
+++ b/Application/index.html
@@ -15,7 +15,9 @@
         <div class="content">
         </div>
         <div class="footer">
-            Copyright &copy; 2021 Joel Mussman. All rights reserved. This is just a fun site to park piratesofthecaribbean.live and potc.live for programming and administration examples.
+            Copyright &copy; 2021 Joel Mussman. All rights reserved.
+            This is just a fun site to park piratesofthecaribbean.live and potc.live for programming and administration examples:
+            see <a href="https://github.com/jmussman/piratesofthecaribbean" target="blank">https://github.com/jmussman/piratesofthecaribbean</a>.
         </div>
     </body>
 </html>
